a1/brendan_gordon/TEST_PROGRAMS/invalidtype/Michael_Ho/invalid1.min
# Float addition op with int and string

var a : int;
var b : string;
var c : float;

a = 1337;
b = "This is a string";

c = a + b;
